src/styles/components.css
article {
  font-size: 0.875rem;
}
article header h3 {
  font-family: var(--app-font-family-display);
  font-size: 1.5rem;
  line-height: 1.2;
  padding: 0;
  margin: 0.25rem 0;
  text-transform: uppercase;
  color: var(--pico-primary);
}
article h4 {
  font-size: 1.125rem;
}

.dock {
  display: inline-flex;
  justify-content: center;
  width: 100%;
  margin: 1rem auto;
  gap: 2rem;
}
.dock .dock__item {
  border: 0;
  margin: 0;
  padding: 1rem;
  background: var(--pico-card-background-color);
  border-radius: 0;
  position: relative;
}
.dock .dock__item.is-active::after {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  border-bottom: 0.25rem solid var(--pico-primary);
}
.dock .dock__badge {
  display: block;
  width: 4rem;
  height: 4rem;
}

